Thu Apr  1 16:46:22 BST 2004 (njh)
----------------------------------
  * libclamav:	Stop gracefully if messageAddLine() fails
  * clamav-milter:	ThreadTimeout has been replaced by ReadTimeout -
  	clamav-milter now supports this

Thu Apr  1 11:37:25 BST 2004 (trog)
-----------------------------------
  * clamd: add writen() function for wrapping write()

Wed Mar 31 22:00:05 BST 2004 (njh)
----------------------------------
  * clamav-milter:	Handle new location of config file parser

Wed Mar 31 18:12:20 BST 2004 (njh)
----------------------------------
  * libclamav: Code tidy up - free memory earlier

Wed Mar 31 09:25:25 CEST 2004 (tk)
----------------------------------
  * libclamav: matcher: don't limit '*' to a single 128KB buffer

Tue Mar 30 23:57:33 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Better handling of multipart within multipart messages

Tue Mar 30 23:18:49 CEST 2004 (tk)
----------------------------------
  * clamav-milter: adapt Makefile to new directory structure
  * small code cleanup

Tue Mar 30 08:40:10 BST 2004 (trog)
-----------------------------------
  * clamav.conf, shared/cfgparser.c: recognise ReadTimeout option
	remove ThreadTimeout option

Mon Mar 29 18:11:08 CEST 2004 (tk)
----------------------------------
  * shared/output.c: don't try to unlock free mutex (bug reported
		     by Nigel)

Mon Mar 29 16:17:05 BST 2004 (trog)
-----------------------------------
  * clamd: disable timeout when ReadTimeout=0

Mon Mar 29 15:45:15 BST 2004 (trog)
-----------------------------------
  * clamd: add support for ReadTimeout option

Mon Mar 29 10:33:52 BST 2004 (njh)
----------------------------------
  * libclamav:	Tidy up code and reduce shuffling of data

Mon Mar 29 02:05:39 CEST 2004 (tk)
----------------------------------
  * big cleanup: remove duplicated code and move it to /shared (fixes
		 a dependency problem when compiling with --disable-pthreads
		 and LogSyslog support in freshclam); eliminate warnings